Bug fix: unreadable green text on green background at smaller sizes.

--- a/courses/courses.css
+++ b/courses/courses.css
@@ -23,15 +23,15 @@
 }
 
 .description a {
-	border-bottom: 1px solid #39C0AC;
-	color: #39C0AC;
+	border-bottom: 1px solid #fff;
+	color: #fff;
 	font-weight: 700;
 	text-decoration: none;
 }
 
 .description a:hover {
-	border-color: #fff;
-	color: #fff;
+	border-color: #39C0AC;
+	color: #39C0AC;
 }
 
 .gray-triangle {
